# wildling

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  Package.swift  README.md  SECURITY.md  build.sh  composer.json  languages.txt  release.sh  test.sh
.github/workflows/: pages.yml  publish-pub.yml  release.yml  test.yml
ada/: README.md  alire.toml  build.sh  shell.sh  wildling.gpr
ada/src/: cli.adb  generator.adb  generator.ads  json.adb  json.ads  parse_pattern.adb  parse_pattern.ads  token.adb  token.ads  wildling.adb  wildling.ads
assembly/: README.md  build.sh
assembly/src/: cli.asm  generator.asm  json.asm  macros.inc  parse_pattern.asm  token.asm  util.asm  wildling.asm
c/: CMakeLists.txt  README.md  build.sh
c/src/: cli.c  generator.c  generator.h  json.c  json.h  parse_pattern.c  parse_pattern.h  token.c  token.h  util.c  util.h  wildling.c  wildling.h
cpp/: CMakeLists.txt  README.md  build.sh
cpp/src/: cli.cpp  generator.cpp  generator.hpp  parse_pattern.cpp  parse_pattern.hpp  template_json.cpp  template_json.hpp  token.cpp  token.hpp  wildling.cpp  wildling.hpp
csharp/: Cli.cs  Generator.cs  ParsePattern.cs  Program.cs  README.md  Token.cs  Wildling.cs  Wildling.csproj  build.sh
dart/: CHANGELOG.md  README.md  build.sh  pubspec.yaml
dart/lib/: wildling.dart
dictionaries/: colors.txt  passwords.txt
docs/: README.md  cli.md  ecosystem-repos.md  help.txt  publishing.md  template.example.json  template.schema.json
docs/snippets/: example.md
elixir/: README.md  build.sh  mix.exs
elixir/lib/: wildling.ex
fortran/: README.md  build.sh  fpm.toml
fortran/src/: cli.f90  generator.f90  json.f90  parse_pattern.f90  token.f90  util.f90  wildling.f90
fsharp/: Cli.fs  Generator.fs  ParsePattern.fs  Program.fs  README.md  Token.fs  Wildling.fs  Wildling.fsproj
go/: README.md  build.sh  go.mod
go/wildling/: cli.go  generator.go  parse_pattern.go  token.go  wildling.go
groovy/: README.md  build.sh  pom.xml
groovy/lib/: wildling.groovy
haskell/: README.md  build.sh  wildling.cabal
haskell/src/: Main.hs  Wildling.hs
haskell/src/Wildling/: Cli.hs  Generator.hs  Json.hs  ParsePattern.hs  Token.hs
java/: README.md  build.sh  pom.xml
javascript/: README.md  build.sh  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
javascript/scripts/: prepare-package.sh
javascript/src/: cli.ts  createGenerator.ts  createToken.ts  index.ts  parsePattern.ts
kotlin/: README.md  build.sh  pom.xml
lua/: README.md  build.sh  wildling-2.0.2-1.rockspec  wildling-2.0.3-1.rockspec  wildling-2.0.4-1.rockspec  wildling-2.0.5-1.rockspec  wildling.rockspec
pascal/: README.md  build.sh
pascal/src/: cli.pas  generator.pas  json.pas  parsepattern.pas  token.pas  wildlinglib.pas
perl/: MANIFEST.SKIP  Makefile.PL  README.md  build.sh
perl/lib/: Wildling.pm
php/: README.md  composer.json
php/src/: Cli.php  (+1 more)
posix-shell/: README.md  build.sh
powershell/: README.md  Wildling.psd1  Wildling.psm1  build.sh
python/: README.md  build.sh  pyproject.toml
python/wildling/: __init__.py  cli.py  generator.py  parse_pattern.py  token.py
r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  build.sh
ruby/: README.md  build.sh  wildling.gemspec
rust/: Cargo.toml  README.md  build.sh
rust/src/: cli.rs  generator.rs  json.rs  lib.rs  main.rs  parse_pattern.rs  token.rs  wildling.rs
scala/: README.md  build.sh  pom.xml
scripts/: build-site.sh  check-monorepo-root.sh  create-github-release.sh  ecosystem-repos.example.env  fetch-icons.sh  lang-preamble.py  mirror-all-ecosystem.sh  mirror-ecosystem-lib.sh  mirror-php-packagist.sh  mirror-swift-spm.sh  package-c-cpp-release.sh  render-lang-pages.py  smoke-publish-artifacts.sh  sync-version.sh
site/: cookbook.html  index.html  lang-meta.json  sandbox.html  syntax.html
swift/: README.md  build.sh
visualbasic/: Cli.vb  Generator.vb  ParsePattern.vb  Program.vb  README.md  Token.vb  Wildling.vb  Wildling.vbproj
zig/: README.md  build.sh  build.zig  build.zig.zon
(+124 files in other folders)
