cabal-version:      2.4
name:               wildling
version:              2.0.0
synopsis:           Pattern based string generator library and CLI
description:        Enumerate pattern combinations for wordlists, domains, and test data.
license:            MIT
author:             dotmonk
maintainer:         dotmonk@users.noreply.github.com
homepage:           https://github.com/dotmonk/wildling
bug-reports:        https://github.com/dotmonk/wildling/issues
category:           Text
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:    Wildling
                      Wildling.Cli
                      Wildling.Generator
                      Wildling.Json
                      Wildling.ParsePattern
                      Wildling.Token
  hs-source-dirs:     src
  build-depends:      base >= 4.14 && < 5
  default-language:   Haskell2010
  ghc-options:        -Wall

executable wildling
  main-is:            Main.hs
  other-modules:      Wildling
                      Wildling.Cli
                      Wildling.Generator
                      Wildling.Json
                      Wildling.ParsePattern
                      Wildling.Token
  hs-source-dirs:     src
  build-depends:      base >= 4.14 && < 5
  default-language:   Haskell2010
  ghc-options:        -Wall
