[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wildling"
version = "2.0.4"
description = "Pattern based string generator library and CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/dotmonk/wildling"

[project.scripts]
wildling = "wildling.cli:main"

[tool.setuptools.packages.find]
include = ["wildling*"]

[tool.setuptools.package-data]
wildling = ["help.txt"]
